Update JavaScript exercises index file

--- a/exercises_repository/index.html
+++ b/exercises_repository/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Reverse String Exercise</title>
-        <script src="./script.js" defer async></script>
+        <title>JavaScript Exercises Repository</title>
+        <script src="./script.js" refer async></script>
     </head>
     <body>
         
